# mitadtu-docking

./: .gitignore  PratikDesai.ipynb  README.md  Tanishka.ipynb  data_exploration_adwait.ipynb  gif_sequence_info.csv  helpers.py  kshitij.ipynb  main.py  pyproject.toml
