[project]
name = "mitadtu-docking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "imageio>=2.37.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
]
